package com.akkw.protobuf.utils.model;

public class ProtobufCoderModel {

    public byte aByte;


    public Byte aByteO;


    public short aShort;

    public Short aShortO;


    public int anInt;

    public Integer anInteger;


    public long aLong;

    public Long alongO;

    public float aFloat;

    public Float aFloatO;

    public double aDouble;

    public Double aDoubleO;


    public boolean isDown;


    public Boolean isOpen;





    private Double aDoubleObject;



}
